# blogs_backent

./: .env.example  .gitignore  README.md  koyeb.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
Docs/: CASOS-DE-ESCRITORIO.md  COMPLETITUD-Y-DESPLIEGUE.md  DECISIONES-TECNICAS.md  GUIA-FRONTEND.md  HU-001-configuracion-base-de-datos.md  HU-002-autenticacion-login.md  HU-003-crud-bloques-dinamicos.md  HU-004-tipos-de-bloques.md  HU-005-pagina-publica.md  HU-006-aislamiento-de-datos.md  HU-007-usuarios-y-roles.md  HU-008-secciones-estaticas.md  PRD.md  REVISION-SEGURIDAD-IMPLEMENTADA.md  SEGURIDAD.md
app/: config.py  dependencies.py  main.py
app/admins/: router.py  schemas.py
app/auth/: router.py  schemas.py
app/blocks/: router.py  schemas.py  validator.py
app/images/: router.py
app/posts/: router.py  schemas.py
app/sections/: router.py  schemas.py  validator.py
migrations/: 001_create_tables.sql  002_seed_initial_data.sql
migrations/verify/: verify_001_schema.sql  verify_002_seed.sql
scripts/: check_admin_login.py  migration_add_posts.sql
tests/: conftest.py  test_admins.py  test_auth.py  test_blocks.py  test_blocks_api.py  test_blocks_validator.py  test_images.py  test_isolation.py  test_posts.py  test_public_endpoints.py  test_sections.py
